Ajout des formations et certifications + logo linkedin

--- a/index.html
+++ b/index.html
@@ -17,13 +17,20 @@
     <p><span>🧑‍💼 Data Science, Data Analyst</span> 
         <span> <img src="images/linkedin_logo.png" alt="LinkedIn" style="width:15px; vertical-align:middle;"> <a href ="https://www.linkedin.com/in/jawhara-chafi/"> Linkedin </a>  </span></p>
   </header>
-  <section id="apropos">
+  <section id ="abouts">
+  <h2>A propos </h2>
+  <div class="about">
+    
+    Rigoureuse, passionnée et prête à relever de nouveaux défis, je recherche un stage à partir de mars 2025 d'une durée de 6 mois 
+    afin de mettre en pratique mes compétences au profit de votre entreprise.
 
+  </div>
   </section>
   <section id="projects">
+    <h2>Expériences</h2>
     <!-- Projet Mémoire de recherche -->
     <div class="project">
-      <h2>Mémoire de recherche : Débruitage d’image par chaîne de Markov</h2>
+      <h3>Mémoire de recherche : Débruitage d’image par chaîne de Markov</h3>
       <p>Étude d'une méthode pour enlever le bruit d’une image par les chaînes de Markov</p>
       <ul>
         <li>Estimation du paramètre de texture par Metropolis-Hastings sur une image bruitée avec mot de passe</li>
@@ -34,7 +41,7 @@
 
     <!-- Projet Analyse du cours boursier -->
     <div class="project">
-      <h2>Analyse du cours boursier</h2>
+      <h3>Analyse du cours boursier</h3>
       <p>Réalisé avec Python (BeautifulSoup, Scikit-learn, Matplotlib)</p>
       <ul>
         <li>Algorithme de scraping pour la récupération de données sur le CAC40</li>
@@ -45,7 +52,7 @@
 
     <!-- Projet Étude des prix des Airbnb -->
     <div class="project">
-      <h2>Étude des prix des Airbnb à Paris</h2>
+      <h3>Étude des prix des Airbnb à Paris</h3>
       <p>Réalisé avec RStudio</p>
       <ul>
         <li>Étude de l’influence de certains facteurs tels que la taille du logement, la localisation et la capacité d’accueil sur les prix des Airbnb</li>
@@ -56,7 +63,7 @@
 
     <!-- Projet Impact de la situation professionnelle -->
     <div class="project">
-      <h2>Impact de la situation professionnelle sur les salaires dans le domaine de la Data</h2>
+      <h3>Impact de la situation professionnelle sur les salaires dans le domaine de la Data</h3>
       <p>Réalisé avec RStudio (tidyverse, ggthemes, ggplot2, lmtest, car)</p>
       <ul>
         <li>Etude de l’influence de l'expérience, du télétravail et de la taille de l'entreprise sur les salaires 
@@ -66,6 +73,62 @@
       </ul>
     </div>
   </section>
+
+  <!-- Section Formations -->
+  <section id="formations">
+    <h2>Formations</h2>
+
+    <div class="formation">
+      <h3>2023 - 2025 : Master Statistique pour l’Evaluation et la Prévision (SEP)</h3>
+      <p><em>Université de Reims Champagne-Ardenne</em></p>
+      <ul>
+        <li>Formation en statistique, économétrie, machine learning et géostatistiques</li>
+        <li>Initiation à la RGPD</li>
+        <li>Développement de compétences sur les langages Python, R, SAS, SQL et VBA</li>
+        <li>Maîtrise des logiciels Git, PowerBI et QGIS</li>
+      </ul>
+    </div>
+
+    <div class="formation">
+      <h3>Juin 2024 : SAS International Summer School</h3>
+      <p><em>Paris, La Défense</em></p>
+      <ul>
+        <li>Introduction sur la Business Analytics, Big Data, Data Visualisation, et Machine Learning</li>
+        <li>Découverte de la data visualisation avec SAS Visual Analytics</li>
+        <li>Préparation aux certifications SAS</li>
+      </ul>
+    </div>
+
+    <div class="formation">
+      <h3>2020 - 2023 : Licence Mathématiques Appliquées - Mention Bien</h3>
+      <p><em>Université de Reims Champagne-Ardenne</em></p>
+      <ul>
+        <li>Formation pluridisciplinaire en mathématiques et informatique</li>
+        <li>Programmation en SQL, Python, Java et HTML</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- Section Certifications -->
+  <section id="certifications">
+    <h2>Certifications</h2>
+
+    <div class="certification">
+      <h3>Août 2024 : SAS Certified Professional - Advanced Programming Using SAS 9.4</h3>
+      <ul>
+        <li>Manipulation et transformation de base de données</li>
+        <li>Utilisation de Macro et SQL</li>
+      </ul>
+    </div>
+
+    <div class="certification">
+      <h3>Décembre 2023 : SAS Certified Specialist - Base Programming Using SAS 9.4</h3>
+      <ul>
+        <li>Manipulation et transformation de base de données sur SAS</li>
+      </ul>
+    </div>
+  </section>
+
 </body>
 </html>
 
