--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- Projet Analyse du cours boursier -->
     <div class="project">
       <h3>Analyse du cours boursier</h3>
-      <p>Réalisé avec Python (BeautifulSoup, Scikit-learn, Matplotlib)</p>
+      <p>Réalisé avec Python <img src="images/python_logo.png" alt="R" style="width:15px; vertical-align:middle;"> (BeautifulSoup, Scikit-learn, Matplotlib)</p>
       <ul>
         <li>Algorithme de scraping pour la récupération de données sur le CAC40</li>
         <li>Entraînement de modèles prédictifs (régression linéaire, K-NN, moyenne mobile) et comparaison des performances sur le cours boursier</li>
@@ -91,7 +91,7 @@
       <ul>
         <li>Formation en statistique, économétrie, machine learning et géostatistiques</li>
         <li>Initiation à la RGPD</li>
-        <li>Développement de compétences sur les langages Python<img src="images/python_logo.png" alt="Python" style="width:15px; vertical-align:middle;">, R <img class = "logo"  src="images/R_logo.png" alt="R" style="width:15px; vertical-align:middle;">, SAS <img src="images/SAS_logo.png" alt="SAS" style="width:15px; vertical-align:middle;">, SQL et VBA</li>
+        <li>Développement de compétences sur les langages Python <img class = "logo" src="images/python_logo.png" alt="Python" style="width:15px; vertical-align:middle;">, R <img class = "logo"  src="images/R_logo.png" alt="R" style="width:15px; vertical-align:middle;">, SAS <img class = "logo" src="images/sas_logo.png" alt="SAS" style="width:15px; vertical-align:middle;">, SQL et VBA</li>
         <li>Maîtrise des logiciels Git, PowerBI et QGIS</li>
       </ul>
     </div>
