Mode clair par défaut

--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
       <ul>
         <li>Formation en statistique, économétrie, machine learning et géostatistiques</li>
         <li>Initiation à la RGPD</li>
-        <li>Développement de compétences sur les langages Python <img class = "logo" src="images/python_logo.png" alt="Python" style="width:15px; vertical-align:middle;">, R <img class = "logo"  src="images/R_logo.png" alt="R" style="width:15px; vertical-align:middle;">, SAS <img class = "logo" src="images/sas_logo.png" alt="SAS" style="width:15px; vertical-align:middle;">, SQL et VBA</li>
+        <li>Développement de compétences sur les langages Python <img class = "logo" src="images/python_logo.png" alt="Python" style="width:15px; vertical-align:middle;">, 
+            R <img class = "logo"  src="images/R_logo.png" alt="R" style="width:15px; vertical-align:middle;">, 
+            SAS <img class = "logo" src="images/sas_logo.png" alt="SAS" style="width:15px; vertical-align:middle;">, SQL et VBA</li>
         <li>Maîtrise des logiciels Git, PowerBI et QGIS</li>
       </ul>
     </div>
@@ -135,7 +137,7 @@
       </ul>
     </div>
   </section>
-  <button id="toggle-theme">Mode clair</button>
+  <button id="toggle-theme">Mode sombre</button>
 
   
 </body>
