Ajout de justification certificats

--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
     <h2>Certifications</h2>
 
     <div class="certification">
-      <h3>Août 2024 : SAS Certified Professional - Advanced Programming Using SAS 9.4</h3>
+      <h3>Août 2024 : <a href = "https://www.credly.com/earner/earned/badge/6e82f129-6d31-48a8-8081-63fcfd67dd19"> SAS Certified Professional - Advanced Programming Using SAS 9.4 </a></h3>
+      <p><a href="certifications/SAS Certified Professional_ Advanced Programming Using SAS 9.4 certificate.pdf" target="_blank">Voir le certificat</a></p>
       <ul>
         <li>Manipulation et transformation de base de données</li>
         <li>Utilisation de Macro et SQL</li>
@@ -154,7 +155,8 @@
     </div>
 
     <div class="certification">
-      <h3>Décembre 2023 : SAS Certified Specialist - Base Programming Using SAS 9.4</h3>
+      <h3>Décembre 2023 : <a href = "https://www.credly.com/org/sas/badge/sas-certified-specialist-base-programming-using-sas-9-4"> SAS Certified Specialist - Base Programming Using SAS 9.4</a></h3>
+      <p><a href="certifications/SAS Certified Specialist_ Base Programming Using SAS 9.4 certificate.pdf" target="_blank">Voir le certificat</a></p>
       <ul>
         <li>Manipulation et transformation de base de données sur SAS</li>
       </ul>
