Ajout logo + uniformisation

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Portfolio de Jawhara Chafi</title>
   <link rel="stylesheet" href="style.css">
   <script src="script_js.js"></script>
+  <link rel="icon" href="images/data.png" type="image/x-icon">
 </head>
 <body>
   <header>
