Ajout d'un projet

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Portfolio de Jawhara Chafi</title>
   <link rel="stylesheet" href="style.css">
   <script src="script_js.js"></script>
-  <link rel="icon" href="images/data.png" type="image/x-icon">
+  <link rel="icon" href="images/data.jpg" type="image/x-icon">
 </head>
 <body>
   <header>
@@ -38,7 +38,7 @@
     <!-- Projet Mémoire de recherche -->
     <div class="project">
       <h3>Mémoire de recherche : Débruitage d’image par chaîne de Markov</h3>
-      <p>Réalisé avec Rstudio <img class = "logo" src="images/R_logo.png" alt="R" style="width:15px; vertical-align:middle;"> et Python <img src="images/python_logo.png" alt="python" style="width:15px; vertical-align:middle;"></p>
+      <p>Réalisé avec Rstudio <img class = "logo" src="images/R_logo.png" alt="R" style="width:15px; vertical-align:middle;"></p>
       <p>Étude d'une méthode pour enlever le bruit d’une image par les chaînes de Markov</p>
       <ul>
         <li>Estimation du paramètre de texture par Metropolis-Hastings sur une image bruitée avec mot de passe</li>
@@ -63,7 +63,7 @@
       <h3>Analyse du cours boursier</h3>
       <p>Réalisé avec Python <img src="images/python_logo.png" alt="R" style="width:15px; vertical-align:middle;"> (BeautifulSoup, Scikit-learn, Matplotlib)</p>
       <ul>
-        <li>Algorithme de scraping pour la récupération de données sur le CAC40</li>
+        <li>Algorithme de scraping pour l'extraction de données sur le CAC40</li>
         <li>Entraînement de modèles prédictifs (régression linéaire, K-NN, moyenne mobile) et comparaison des performances sur le cours boursier</li>
         <li>Réalisation du rapport sur Word</li>
       </ul>
@@ -102,6 +102,16 @@
     
     </ul>
     </div>
+    <div class = "project">
+      <h3>Gestion d'un centre de formation</h3>
+      <p>Réalisé avec Looping, MySQL et Phdmyadmin</p>
+      <ul>
+        <li>Création d'une base de donnée en SQL sur le site phpmyadmin</li>
+        <li> Création de requêtes complexes (division, soustraction) en SQL <img class = "logo" src="images/SQL_logo.png" alt="SQL" style="width:15px; vertical-align:middle;"> </li>
+        <li> Réalisation du rapport sur Word</li>
+      </ul>
+
+    </div>
     
   </section>
 
@@ -117,7 +127,7 @@
         <li>Initiation à la RGPD</li>
         <li>Développement de compétences sur les langages Python <img class = "logo" src="images/python_logo.png" alt="Python" style="width:15px; vertical-align:middle;">, 
             R <img class = "logo"  src="images/R_logo.png" alt="R" style="width:15px; vertical-align:middle;">, 
-            SAS <img class = "logo" src="images/sas_logo.png" alt="SAS" style="width:15px; vertical-align:middle;">, SQL et VBA</li>
+            SAS <img class = "logo" src="images/sas_logo.png" alt="SAS" style="width:15px; vertical-align:middle;">, SQL <img class = "logo" src="images/SQL_logo.png" alt="SQL" style="width:15px; vertical-align:middle;"> et VBA</li>
         <li>Maîtrise des logiciels Git, PowerBI et QGIS</li>
       </ul>
     </div>
