Correction d'un bug

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <p>Réalisé avec Looping, MySQL et Phdmyadmin</p>
       <ul>
         <li>Création d'une base de donnée en SQL sur le site phpmyadmin</li>
-        <li> Création de requêtes complexes (division, soustraction) en SQL <img class = "logo" src="images/SQL_logo.png" alt="SQL" style="width:15px; vertical-align:middle;"> </li>
+        <li> Création de requêtes complexes (division, soustraction) en SQL <img class = "logo" src="images/sql_logo.png" alt="SQL" style="width:15px; vertical-align:middle;"> </li>
         <li> Réalisation du rapport sur Word</li>
       </ul>
 
@@ -127,7 +127,7 @@
         <li>Initiation à la RGPD</li>
         <li>Développement de compétences sur les langages Python <img class = "logo" src="images/python_logo.png" alt="Python" style="width:15px; vertical-align:middle;">, 
             R <img class = "logo"  src="images/R_logo.png" alt="R" style="width:15px; vertical-align:middle;">, 
-            SAS <img class = "logo" src="images/sas_logo.png" alt="SAS" style="width:15px; vertical-align:middle;">, SQL <img class = "logo" src="images/SQL_logo.png" alt="SQL" style="width:15px; vertical-align:middle;"> et VBA</li>
+            SAS <img class = "logo" src="images/sas_logo.png" alt="SAS" style="width:15px; vertical-align:middle;">, SQL <img class = "logo" src="images/sql_logo.png" alt="SQL" style="width:15px; vertical-align:middle;"> et VBA</li>
         <li>Maîtrise des logiciels Git, PowerBI et QGIS</li>
       </ul>
     </div>
